--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,8 @@
 }
 
 body {
-  /* background: url('/assets/BG2.png') no-repeat center center fixed;
-  background-size: cover; */
+  background: url('/assets/BG2.png') no-repeat center center fixed;
+  background-size: cover;
   color: var(--foreground);
   font-family: 'Mona Sans', sans-serif;
   position: relative;
@@ -38,6 +38,24 @@ body {
     min-height: 100vh;
     /* Make sure body takes full height */
     margin: 0;
+}
+
+/* globals.css */
+
+body.custom-static-bg {
+  background: url('/assets/BG2.png') no-repeat center center fixed;
+  background-size: cover;
+  color: var(--foreground);
+  font-family: 'Mona Sans', sans-serif;
+  position: relative;
+  max-width: 100vw;
+  overflow-x: hidden;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
 }
 
 .background-video {
